src/tests/errors/lexing/test04.cmp
program main 
begin
    var x : int  /*  /* no nesting of comments */  */
end 